--- a/traceability-app/package.json
+++ b/traceability-app/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.10",
     "@azure/msal-angular": "^2.0.5",
     "@azure/msal-browser": "^2.19.0",
+    "bootstrap": "^4.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
