--- a/traceability-app/angular.json
+++ b/traceability-app/angular.json
@@ -85,7 +85,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/images/fav/14780_7af9.png",
               "src/assets"
             ],
             "styles": [
